@@ -1,3 +1,5 @@
+  * Chests render more correctly now
+
 Minecraft X-Ray 3.3.1 (2011.09.14)
 
   * Updated OS detection to be far more accepting (specifically for
